# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
  creating metadata.xml to shut up repoman

  30 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  sun-jdk-1.6.0.10_beta28.ebuild:
  Fix $S.

  29 Jul 2008; Serkan Kaba <serkan@gentoo.org> -files/sun-jdk-1.6.0.02.env,
  +sun-jdk-1.6.0.10_beta28.ebuild, +files/sun-jdk-1.6.env:
  Add Java 6 u10 beta.

  20 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.7.0.0_alpha30.ebuild, +sun-jdk-1.7.0.0_alpha31.ebuild:
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  04 Jul 2008; Serkan Kaba <serkan@gentoo.org>
  -sun-jdk-1.7.0.0_alpha28.ebuild, +sun-jdk-1.7.0.0_alpha30.ebuild:
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  08 Jun 2008; Serkan Kaba <serkan@gentoo.org> -sun-jdk-1.7.0.0_alpha26.ebuild
  +sun-jdk-1.7.0.0_alpha28.ebuild
  Bump to latest alpha. Thanks to Fabian Fingerle <fabian@datensalat.eu> for
  submitting the bump.

  02 May 2008; Serkan Kaba <serkan_kaba@yahoo.com>
  -sun-jdk-1.7.0.0_alpha18.ebuild, -sun-jdk-1.7.0.0_alpha21.ebuild,
  -sun-jdk-1.7.0.0_alpha22.ebuild, -sun-jdk-1.7.0.0_alpha23.ebuild,
  -sun-jdk-1.7.0.0_alpha24.ebuild, +sun-jdk-1.7.0.0_alpha26.ebuild:
  Bump to lastest snapshot. Prune old versions.

*sun-jdk-1.7.0.0_alpha22 (24 Oct 2007)

  24 Oct 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha22.ebuild:
  Version bump.

*sun-jdk-1.7.0.0_alpha21 (01 Oct 2007)

  01 Oct 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  +sun-jdk-1.7.0.0_alpha21.ebuild:
  Version bump

*sun-jdk-1.7.0.0_alpha18 (18 Aug 2007)

  11 Aug 2007; Petteri Räty <betelgeuse@gentoo.org> 
  +sun-jdk-1.7.0.0_alpha18.ebuild:
  Version bump.

*sun-jdk-1.7.0.0_alpha16 (21 Jul 2007)

  21 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
  +sun-jdk-1.7.0.0_alpha16.ebuild: