@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.7.0.0_alpha33 (15 Aug 2007)
+
+  15 Aug 2008; Petteri Räty <betelgeuse@gentoo.org>
+  +sun-jdk-1.7.0.0_alpha33.ebuild:
+  Bump.
+
   14 Aug 2008; Jesse Farinacci <jieryn@gmail.com> +metadata.xml:
   creating metadata.xml to shut up repoman
 
